--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
-    height: 100px;
     background-color: black;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -10,9 +10,9 @@
 
 .header a {
     text-decoration: none;
+    font-weight: 600;
     color: white;
     margin-left: 36px;
-    font-size: 17px;
 }
 
 .header a:hover {
